--- a/less/styles.less
+++ b/less/styles.less
@@ -67,6 +67,22 @@ body{
    position:relative;
 }
 
+// @media only screen and (max-width: 600px){
+//   .main-body{
+//     padding-bottom: 1000px;
+//   }
+//   footer{
+//     background-color: pink;
+//   }
+// }
+
+
+@media only screen and (max-width: 600px) {
+  body {
+    padding-bottom: 300px;
+  }
+}
+
 .main-body{
   margin-top: 40px;
   padding-bottom: 100px;
@@ -74,6 +90,7 @@ body{
     img{
       float: right;
       width: 350px;
+      max-width: 100%;
       border-radius: 50%;
     }
   }
@@ -95,7 +112,7 @@ body{
       .circle-link{
         display: table;
         margin: 0px 10px 20px;
-        float: left;
+        //float: left;
         width: 150px;
         height: 150px;
         border-radius: 50%;
@@ -123,10 +140,11 @@ body{
   .project-pic{
     display: block;
     margin: 10px auto;
-    height: 250px;
-  }
-  .project-text{
-    //text-align: right;
+    max-width: 100%;
+    img{
+      height: auto;
+      max-width: 100%;
+    }
   }
 }
 
@@ -207,7 +225,7 @@ footer{
   position:absolute;
   bottom:0;
   width:100%;
-  height:100px;   /* Height of the footer */
+  min-height:100px;   /* Height of the footer */
 
   .footer-text{
     margin-left: 10px;
