--- a/less/styles.less
+++ b/less/styles.less
@@ -141,6 +141,7 @@ body{
     display: block;
     margin: 10px auto;
     max-width: 100%;
+    width: 450px;
     img{
       height: auto;
       max-width: 100%;
